[tool.poetry]
name = "duck-api"
version = "0.1.0"
description = "LUCSS Duck"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gpio = "^0.3.0"
starlette = "^0.13.0"
uvicorn = "^0.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
